backend/vulnerability_analysis/testing/bof2/full/klee-out-0/test000128.ptr.err
Error: memory error: out of bound pointer
File: libc/string/strcpy.c
Line: 27
assembly.ll line: 12039
State: 98
Stack: 
	#000012039 in strcpy(139118927413248, 139141475991552) at libc/string/strcpy.c:27
	#100007971 in obfuscate(139141475991552, 139147918442496, 139672978194432) at final_tc/bof2_klee.c:15
	#200008216 in input_data() at final_tc/bof2_klee.c:31
	#300008242 in __klee_posix_wrapped_main() at final_tc/bof2_klee.c:37
	#400006086 in __user_main(1, 140344603705344, 140344603705360) at src/runtime/POSIX/klee_init_env.c:245
	#500000540 in __uClibc_main(140328824733696, 1, 140344603705344, 0, 0, 0, 0) at libc/misc/internals/__uClibc_main.c:401
	#600000705 in main(1, 140344603705344)
Info: 
	address: 139118927413258
	next: object at 139099063189504 of size 4
		MO7546[4] allocated at __klee_posix_wrapped_main():  %1 = alloca i32, align 4
